margins fixed, word wrap fixed, verbal changes

--- a/public/css/portfoliocss.css
+++ b/public/css/portfoliocss.css
@@ -6,7 +6,7 @@
     white-space: pre-wrap;       /* css-3 */
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
     white-space: -webkit-pre-wrap; /* Newer versions of Chrome/Safari*/
-    word-break: break-all;
+    /* word-break: break-all; */
     white-space: normal;
 }
 
