--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,7 @@
 }
 
 .container {
-  margin: 0pt;
+  text-align: center;
   width: 100%;
 }
 
@@ -28,7 +28,7 @@
 
 body {
   background-color: black;
-  margin: 0;
+  margin: 0 !important;
 
 }
 
